# ml-cli

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODEOWNERS  Doxyfile  Makefile  README.md  exclude.txt  mypy.ini  pyproject.toml
docs/: Makefile  mls.rst  script.py  template.rst
mls/: __about__.py  __init__.py  cli.py
mls/manager/: __init__.py
mls/manager/configure/: cli.py  help.py  utils.py
mls/manager/dts/: connector_cli.py  custom_types.py  decorators.py  transfer_cli.py  utils.py
mls/manager/job/: cli.py  constants.py  custom_types.py  dataclasses.py  help.py  utils.py
mls/schema/: table.py
mls/utils/: __init__.py  common.py  common_types.py  execption.py  fomatter.py  openssl.py  settings.py
mls_core/: __init__.py  _client.py  client.py  exeptions.py  setting.py
samples/: template.binary.yaml  template.binary_exp.yaml  template.horovod.yaml  template.pytorch.yaml  template.pytorch2.yaml  template.pytorch_elastic.yaml  template.spark.yaml
tests/: __init__.py  common_types_test.py  config_test.py  conftest.py  core_test.py  doc_test.py  job_dataclass_test.py  job_logs_test.py  job_run_test.py  job_test.py  mls_entry_point_test.py  openssl_test.py  samples_test.py  schema_test.py  table_jobs_test.py  utils_common_test.py
tests/allocation/: __init__.py  cli_test.py  data.py
tests/dts/: __init__.py  client_test.py  common_test.py  conftest.py  connector_test.py  transfer_test.py
tests/fixtures/: 1.yaml  2.yaml
tests/queue/: __init__.py  cli_test.py  data.py
Руководство cli/: FAQ.md  Быстрый страрт.md  Запуск задачи.md  Настройка автокомплитера.md
Справочник CLI/: FAQ.md  Быстрый страрт.md  Запуск задачи.md  Настройка автокомплитера.md  Работа переменных окружений.md  Сокрытие credentials.md
